--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@layer base{
+    body{
+        color: #333333;
+        background-color: #e9a3a3;
+    }
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@layer components{
+    .menuLink{
+        @apply cursor-pointer hover:text-[#000];
+    }
 }
