Updated background image and text styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,13 @@
 
 @layer base{
     body{
-        color: #333333;
+        color: #0a0a0a;
         background-color: #e9a3a3;
+        background-image: url('../../public/backfor.png');
+        background-repeat: no-repeat;
+        background-size: cover; /* Ensures the image covers the whole screen */
+        background-attachment: fixed; /* Keeps the image fixed while scrolling */
+        background-position: center; /* Centers the image */
     }
 }
 
